infrastructure/01-system/traefik/manifests/security-txt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-txt
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: security-txt
  template:
    metadata:
      labels:
        app: security-txt
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
      containers:
      - name: nginx
        image: nginxinc/nginx-unprivileged:alpine
        ports:
        - containerPort: 8080
        securityContext:
          runAsNonRoot: true
          runAsUser: 101
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        volumeMounts:
        - name: security-txt-vol
          mountPath: /usr/share/nginx/html/.well-known
      volumes:
      - name: security-txt-vol
        configMap:
          name: security-txt
---
apiVersion: v1
kind: Service
metadata:
  name: security-txt
  namespace: traefik
spec:
  selector:
    app: security-txt
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: security-txt
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: PathPrefix(`/.well-known/security.txt`)
    kind: Rule
    services:
    - name: security-txt
      port: 80
